<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/apod_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".ui.main.ApodFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/apod_main_items_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/apod_progressbar"
            style="@style/progressbar_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apod_text_input_layout"
            style="@style/apod_input_text_layout_style"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:hint="@string/apod_input_hint"

            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/apod_text_input_edit_text"
                android:layout_width="match_parent"
                style="@style/apod_edit_text_style"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/apod_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apod_text_input_layout"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/apod_chip_today"
                style="@style/apod_chip_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_variant_today" />

            <com.google.android.material.chip.Chip
                android:id="@+id/apod_chip_yesterday"
                style="@style/apod_chip_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_variant_yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/apod_chip_before_yesterday"
                style="@style/apod_chip_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_variant_day_before_yesterday" />
        </com.google.android.material.chip.ChipGroup>

        <kosmicbor.giftapp.pictureofthedayapp.utils.EquilateralImageView
            android:id="@+id/apod_main_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_pic_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/apod_bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/apod_bottom_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="?colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:menu="@menu/apod_actionbar_menu"
        app:navigationIcon="@drawable/ic_baseline_menu_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/apod_fab"
        style="@style/apod_fab_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_desc"
        app:layout_anchor="@id/apod_bottom_appbar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>